--- a/src/components/NewTaskForm/NewTaskForm.module.css
+++ b/src/components/NewTaskForm/NewTaskForm.module.css
@@ -68,4 +68,14 @@
   .wrapper {
     flex-direction: column;
   }
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+  .tagInput {
+    width: 80%;
+  }
+  .descInput {
+    width: 80%;
+  }
 }
